# AccidentDetection-Pico-EdgeImpulse

./: .gitignore  README.md
01_ei_carstate_acquisition/: CMakeLists.txt  MPU6050.h  flash.sh  main.cpp
02_ei_carstate_recog/: CMakeLists.txt  flash.sh
02_ei_carstate_recog/model-parameters/: anomaly_clusters.h  anomaly_types.h  model_metadata.h
02_ei_carstate_recog/source/: MPU6050.cpp  main.cpp
02_ei_carstate_recog/tflite-model/: tflite-trained.h
